--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "bootstrap": "^5.0.1",
     "express": "^4.17.1",
-    "jquery": "^3.6.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
